small update to the scraping script

--- a/dataset/news_extract.ipynb
+++ b/dataset/news_extract.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "475a4a5b",
+   "id": "e21f00c0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T22:08:28.416702Z",
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9e0ec70c",
+   "id": "78052206",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T22:08:28.432387Z",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8c914be6",
+   "id": "822ef0d4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T22:08:28.447278Z",
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9d91ceb6",
+   "id": "addfb754",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T22:08:28.462648Z",
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1212464f",
+   "id": "d50f3470",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T22:08:29.710178Z",
@@ -107,7 +107,7 @@
    },
    "outputs": [],
    "source": [
-    "dir_path = 'news/washington-state/temp/'\n",
+    "dir_path = 'news/washington-state/'\n",
     "create_dataset('articles.csv', dir_path, washington_state_wire, get_washington_news_article)\n",
     "\n",
     "file_name = os.path.join(dir_path, 'articles.csv')\n",
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e575d011",
+   "id": "a674e1f7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T22:08:29.742356Z",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa5c4ab4",
+   "id": "4f512632",
    "metadata": {},
    "source": [
     "# Los angeles daily news"
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5f1e7ab0",
+   "id": "e71657ac",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T22:08:29.757705Z",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "da864d18",
+   "id": "4cabebf4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T22:08:30.394469Z",
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e0bb2d1f",
+   "id": "08145609",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T22:08:30.409787Z",
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d72f0b98",
+   "id": "22fc428a",
    "metadata": {},
    "source": [
     "# San francisco chronicles"
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "960bddb7",
+   "id": "00bfd838",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T22:08:30.425345Z",
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a1a0dc6e",
+   "id": "2cd27e6f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T22:08:32.742989Z",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "33914862",
+   "id": "09044413",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T22:08:32.774084Z",
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "163265be",
+   "id": "bb7efb23",
    "metadata": {},
    "source": [
     "# illinois"
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0c01bda2",
+   "id": "f8ddf3d4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T22:08:33.840433Z",
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "512c787d",
+   "id": "a01ea0be",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T22:08:33.855579Z",
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68cf2c79",
+   "id": "300bf07c",
    "metadata": {},
    "source": [
     "# Texas"
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9d16aa8f",
+   "id": "9afdd025",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T22:08:36.862580Z",
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "458bdd48",
+   "id": "3720bb95",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T22:08:36.878490Z",
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc1607b2",
+   "id": "e9169ae4",
    "metadata": {},
    "source": [
     "# Maryland"
@@ -917,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "34ed09e7",
+   "id": "7cbec671",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T22:08:36.909377Z",
@@ -957,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "321c41f7",
+   "id": "22b19c22",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T22:08:42.425954Z",
@@ -979,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "1588b0e8",
+   "id": "cf7fc4c3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-26T22:08:42.441570Z",
