--- a/dataset/news_extract.ipynb
+++ b/dataset/news_extract.ipynb
@@ -668,7 +668,7 @@
    "id": "17b469d6",
    "metadata": {},
    "source": [
-    "## Mid-West"
+    "## Central"
    ]
   },
   {
@@ -731,14 +731,14 @@
     "\n",
     "    return title, text, date, news_source\n",
     "\n",
-    "dir_path = 'news/mid-west/chicago'\n",
+    "dir_path = 'news/central/chicago'\n",
     "\n",
     "create_dataset('articles.csv', dir_path, cst_news, get_cst_news)\n",
     "\n",
     "file_name = os.path.join(dir_path, 'articles.csv')\n",
     "df_cst = pd.read_csv(file_name)\n",
     "\n",
-    "df_cst['region'] = 'mid-west'\n",
+    "df_cst['region'] = 'central'\n",
     "df_cst.to_csv(file_name, index=False)"
    ]
   },
@@ -788,7 +788,7 @@
        "      <td>\\nI have owned and driven an electric vehicle ...</td>\n",
        "      <td>2021-04-05 12:30:27</td>\n",
        "      <td>chicago-suntimes</td>\n",
-       "      <td>mid-west</td>\n",
+       "      <td>central</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -796,7 +796,7 @@
        "      <td>\\nGov. J.B. Pritzker on Tuesday signed legisla...</td>\n",
        "      <td>2021-11-16 12:03:13</td>\n",
        "      <td>chicago-suntimes</td>\n",
-       "      <td>mid-west</td>\n",
+       "      <td>central</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -804,7 +804,7 @@
        "      <td>\\nIllinois has an electric vehicle chicken-and...</td>\n",
        "      <td>2021-04-04 15:52:24</td>\n",
        "      <td>chicago-suntimes</td>\n",
-       "      <td>mid-west</td>\n",
+       "      <td>central</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -812,7 +812,7 @@
        "      <td>\\nAs some corporate headquarters decamp for ot...</td>\n",
        "      <td>2023-07-17 07:00:00</td>\n",
        "      <td>chicago-suntimes</td>\n",
-       "      <td>mid-west</td>\n",
+       "      <td>central</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -831,11 +831,11 @@
        "2  \\nIllinois has an electric vehicle chicken-and...  2021-04-04 15:52:24   \n",
        "3  \\nAs some corporate headquarters decamp for ot...  2023-07-17 07:00:00   \n",
        "\n",
-       "        news_source    region  \n",
-       "0  chicago-suntimes  mid-west  \n",
-       "1  chicago-suntimes  mid-west  \n",
-       "2  chicago-suntimes  mid-west  \n",
-       "3  chicago-suntimes  mid-west  "
+       "        news_source   region  \n",
+       "0  chicago-suntimes  central  \n",
+       "1  chicago-suntimes  central  \n",
+       "2  chicago-suntimes  central  \n",
+       "3  chicago-suntimes  central  "
       ]
      },
      "execution_count": 17,
@@ -887,14 +887,14 @@
     "    news_source = 'minneapolis-star-tribune'\n",
     "    return title, text, published_date, news_source\n",
     "\n",
-    "dir_path = 'news/mid-west/minneapolis'\n",
+    "dir_path = 'news/central/minneapolis'\n",
     "\n",
     "create_dataset('articles.csv', dir_path, mst_news, get_mst_news)\n",
     "\n",
     "file_name = os.path.join(dir_path, 'articles.csv')\n",
     "df_mst = pd.read_csv(file_name)\n",
     "\n",
-    "df_mst['region'] = 'mid-west'\n",
+    "df_mst['region'] = 'central'\n",
     "df_mst.to_csv(file_name, index=False)"
    ]
   },
@@ -944,7 +944,7 @@
        "      <td>Arresting climate change requires, among other...</td>\n",
        "      <td>May 21, 2023 — 6:00pm</td>\n",
        "      <td>minneapolis-star-tribune</td>\n",
-       "      <td>mid-west</td>\n",
+       "      <td>central</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -952,7 +952,7 @@
        "      <td>Two Minnesota organizations, including a Nativ...</td>\n",
        "      <td>May 19, 2023 — 6:57pm</td>\n",
        "      <td>minneapolis-star-tribune</td>\n",
-       "      <td>mid-west</td>\n",
+       "      <td>central</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -960,7 +960,7 @@
        "      <td>The first time I knew our new Nissan Leaf was ...</td>\n",
        "      <td>October 14, 2023 — 1:45pm</td>\n",
        "      <td>minneapolis-star-tribune</td>\n",
-       "      <td>mid-west</td>\n",
+       "      <td>central</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -968,7 +968,7 @@
        "      <td>The Minnesota Court of Appeals has upheld the ...</td>\n",
        "      <td>January 30, 2023 — 6:18pm</td>\n",
        "      <td>minneapolis-star-tribune</td>\n",
-       "      <td>mid-west</td>\n",
+       "      <td>central</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -987,11 +987,11 @@
        "2  The first time I knew our new Nissan Leaf was ...   \n",
        "3  The Minnesota Court of Appeals has upheld the ...   \n",
        "\n",
-       "                        date               news_source    region  \n",
-       "0      May 21, 2023 — 6:00pm  minneapolis-star-tribune  mid-west  \n",
-       "1      May 19, 2023 — 6:57pm  minneapolis-star-tribune  mid-west  \n",
-       "2  October 14, 2023 — 1:45pm  minneapolis-star-tribune  mid-west  \n",
-       "3  January 30, 2023 — 6:18pm  minneapolis-star-tribune  mid-west  "
+       "                        date               news_source   region  \n",
+       "0      May 21, 2023 — 6:00pm  minneapolis-star-tribune  central  \n",
+       "1      May 19, 2023 — 6:57pm  minneapolis-star-tribune  central  \n",
+       "2  October 14, 2023 — 1:45pm  minneapolis-star-tribune  central  \n",
+       "3  January 30, 2023 — 6:18pm  minneapolis-star-tribune  central  "
       ]
      },
      "execution_count": 19,
@@ -1062,14 +1062,14 @@
     "    \n",
     "    return title, text, published_date, news_source\n",
     "\n",
-    "dir_path = 'news/mid-west/houston/'\n",
+    "dir_path = 'news/central/houston/'\n",
     "\n",
     "create_dataset('articles.csv', dir_path, hc_news, get_hc_news)\n",
     "\n",
     "file_name = os.path.join(dir_path, 'articles.csv')\n",
     "df_hc = pd.read_csv(file_name)\n",
     "\n",
-    "df_hc['region'] = 'mid-west'\n",
+    "df_hc['region'] = 'central'\n",
     "df_hc.to_csv(file_name, index=False)"
    ]
   },
@@ -1119,7 +1119,7 @@
        "      <td>Houston Mayor Sylvester Turner was one ofmore ...</td>\n",
        "      <td>June 15, 2017</td>\n",
        "      <td>houstonchronicle</td>\n",
-       "      <td>mid-west</td>\n",
+       "      <td>central</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1127,7 +1127,7 @@
        "      <td>Regarding \"Tomlinson: GM’s new Hummer and othe...</td>\n",
        "      <td>Jan. 20, 2023</td>\n",
        "      <td>houstonchronicle</td>\n",
-       "      <td>mid-west</td>\n",
+       "      <td>central</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1135,7 +1135,7 @@
        "      <td>Analysts at Ernst and Young surveyed 1,500 U.S...</td>\n",
        "      <td>July 3, 2023</td>\n",
        "      <td>houstonchronicle</td>\n",
-       "      <td>mid-west</td>\n",
+       "      <td>central</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1152,10 +1152,10 @@
        "1  Regarding \"Tomlinson: GM’s new Hummer and othe...  Jan. 20, 2023   \n",
        "2  Analysts at Ernst and Young surveyed 1,500 U.S...   July 3, 2023   \n",
        "\n",
-       "        news_source    region  \n",
-       "0  houstonchronicle  mid-west  \n",
-       "1  houstonchronicle  mid-west  \n",
-       "2  houstonchronicle  mid-west  "
+       "        news_source   region  \n",
+       "0  houstonchronicle  central  \n",
+       "1  houstonchronicle  central  \n",
+       "2  houstonchronicle  central  "
       ]
      },
      "execution_count": 22,
@@ -1210,13 +1210,13 @@
     "    \n",
     "    return title, text, second_p, news_source\n",
     "\n",
-    "dir_path = 'news/mid-west/dallas/'\n",
+    "dir_path = 'news/central/dallas/'\n",
     "create_dataset('articles.csv', dir_path, dallas_news, get_dallas_news)\n",
     "\n",
     "file_name = os.path.join(dir_path, 'articles.csv')\n",
     "df_dn = pd.read_csv(file_name)\n",
     "\n",
-    "df_dn['region'] = 'mid-west'\n",
+    "df_dn['region'] = 'central'\n",
     "df_dn.to_csv(file_name, index=False)"
    ]
   },
@@ -1266,7 +1266,7 @@
        "      <td>businessAutos ByThe Associated Press 5:38 AM o...</td>\n",
        "      <td>5:38 AM on Dec 28, 2022 CST</td>\n",
        "      <td>dallasnews</td>\n",
-       "      <td>mid-west</td>\n",
+       "      <td>central</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1274,7 +1274,7 @@
        "      <td>News ByNoor Adatia 8:00 AM on Oct 8, 2022 CDT ...</td>\n",
        "      <td>8:00 AM on Oct 8, 2022 CDT</td>\n",
        "      <td>dallasnews</td>\n",
-       "      <td>mid-west</td>\n",
+       "      <td>central</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1282,7 +1282,7 @@
        "      <td>businessAutos ByThe Associated Press 1:38 PM o...</td>\n",
        "      <td>1:38 PM on Apr 17, 2023 CDT</td>\n",
        "      <td>dallasnews</td>\n",
-       "      <td>mid-west</td>\n",
+       "      <td>central</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1290,7 +1290,7 @@
        "      <td>newsPolitics ByAarón Torres 6:00 AM on Jul 3, ...</td>\n",
        "      <td>6:00 AM on Jul 3, 2023 CDT</td>\n",
        "      <td>dallasnews</td>\n",
-       "      <td>mid-west</td>\n",
+       "      <td>central</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1309,11 +1309,11 @@
        "2  businessAutos ByThe Associated Press 1:38 PM o...   \n",
        "3  newsPolitics ByAarón Torres 6:00 AM on Jul 3, ...   \n",
        "\n",
-       "                          date news_source    region  \n",
-       "0  5:38 AM on Dec 28, 2022 CST  dallasnews  mid-west  \n",
-       "1   8:00 AM on Oct 8, 2022 CDT  dallasnews  mid-west  \n",
-       "2  1:38 PM on Apr 17, 2023 CDT  dallasnews  mid-west  \n",
-       "3   6:00 AM on Jul 3, 2023 CDT  dallasnews  mid-west  "
+       "                          date news_source   region  \n",
+       "0  5:38 AM on Dec 28, 2022 CST  dallasnews  central  \n",
+       "1   8:00 AM on Oct 8, 2022 CDT  dallasnews  central  \n",
+       "2  1:38 PM on Apr 17, 2023 CDT  dallasnews  central  \n",
+       "3   6:00 AM on Jul 3, 2023 CDT  dallasnews  central  "
       ]
      },
      "execution_count": 24,
@@ -1888,7 +1888,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
